Z-index from pageletcreator change to avoid overlapping. [#714]

--- a/src/main/resources/editor/pageletcreator/pageletcreator.css
+++ b/src/main/resources/editor/pageletcreator/pageletcreator.css
@@ -3,7 +3,7 @@
 	top: 45px;
 	left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 15;
     background-color: white;
 }
 
